Fix concurency